# CS8764-GestureControl-Cpp

./: .gitignore  CMakeLists.txt  README.md  gestureControlHelper.cpp  gestureControlHelper.hpp  main.cpp
